# tiga-ipc

./: .gitignore  README.md  RELEASE.md  TigaIpc.sln
TigaIpc.Benchmarks/: MemoryMappedFileBenchmarks.cs  Program.cs
TigaIpc.Client/: Program.cs  TigaIpc.Client.csproj
TigaIpc.Server/: GlobalSuppressions.cs  Program.cs  TigaIpc.Server.csproj
TigaIpc.TestHost/: Program.cs  TigaIpc.TestHost.csproj
TigaIpc.Tests/: ChecksumProviderTests.cs  LogBookSchemaTests.cs  MemoryMappedFileConcurrencyTests.cs  PerClientTopologyTests.cs  (+5 more)
nodejs/: Cargo.toml  LICENSE  README.md  index.d.ts  package.json
nodejs/examples/: README.md  tiga_invoke.js  tiga_read.js
nodejs/mmap-napi/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
nodejs/mmap-napi/examples/: README.md  tiga_invoke.js  tiga_read.js  tiga_server.js
nodejs/mmap-napi/runtime/: native.js  protocol.js  server.js
nodejs/mmap-napi/runtime/workers/: notification-listener.js
nodejs/mmap-napi/scripts/: build-addon.js  sync-package-types.js
nodejs/mmap-napi/src/: lib.rs  tiga_channel.rs  tiga_listener.rs  tiga_logbook.rs  tiga_notify.rs  tiga_notify_windows.rs
nodejs/mmap-napi/src/tiga/: common.rs  invoke.rs  mod.rs  paths.rs  read.rs  write.rs
nodejs/runtime/: index.js  server.js  server.test.js
nodejs/runtime/workers/: notification-listener.js
nodejs/scripts/: sync-package-types.js
nodejs/src/: lib.rs  tiga_channel.rs  tiga_listener.rs  tiga_notify.rs  tiga_notify_windows.rs  tiga_protocol.rs  tiga_sys.rs  wyhash_compat.rs
nodejs/src/tiga/: common.rs  paths.rs
(+98 files in other folders)
