[package]
name = "mmap-napi"
version = "0.2.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi6"] }
napi-derive = "2.16.0"
memmap2 = "0.9.5"
rmp = "0.8.14"
rmpv = "1.0.0"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
napi-build = "2.1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_System_Performance",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
] }

[profile.release]
lto = true
